--- a/MyCars/data.plist
+++ b/MyCars/data.plist
@@ -23,7 +23,7 @@
 		<key>lastStarted</key>
 		<date>2016-11-08T18:15:24Z</date>
 		<key>imageName</key>
-		<string>lamborginiMurcielago.png</string>
+		<string>lamborginiMurcelago.png</string>
 		<key>timesDriven</key>
 		<integer>1</integer>
 	</dict>
